--- a/styles/master.css
+++ b/styles/master.css
@@ -1,5 +1,9 @@
 
 /*_____________Général_____________*/
+@font-face {
+ font-family: "Optician-Sans";
+ src: url("fonts/Optician-Sans.otf") format('truetype');
+}
 
 body{
   margin: 0;
@@ -10,6 +14,11 @@ body{
 section{
   border-top: 2px solid #D1E2E8;
   min-height: 65vh;
+}
+
+h1,
+h2{
+  font-family: "Optician-Sans";
 }
 
 
@@ -134,6 +143,17 @@ nav{
   transform: none;
 }
 
+#main-menu:target + .backdrop {
+  display: block;
+  background: rgba(250, 255, 177, 0.8);
+  position: absolute;
+  top : 0;
+  left : 0;
+  width: 100%;
+  height : 100%;
+  z-index: 998;
+}
+
 
 /*_____________Textes_____________*/
 
@@ -154,4 +174,41 @@ h2{
 
 img{
   width: 100%;
+}
+
+
+/*_____________Boutons_____________*/
+
+.btn {
+  background-color: #7C939C;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+
+/*_____________Page alphabet - Grid_____________*/
+
+#container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+
+.box{
+  background: #7C939C;
+  color: #fff;
+  padding: 20px;
+  margin: 10px;
+}
+
+
+#container_flex{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
