--- a/styles/master.css
+++ b/styles/master.css
@@ -41,7 +41,7 @@ img{
 }
 
 
-/*_____________Slider_____________*/
+/*_____________Page d'accueil_____________*/
 
 .slider{
   background-image: url("../img/children.jpg");
@@ -54,6 +54,10 @@ img{
   justify-content: center;
 }
 
+
+#section01{
+  text-align: center;
+}
 
 /*_____________Menu burger_____________*/
 
@@ -265,6 +269,8 @@ nav{
   color: white;
 }
 
+/* Animation du C */
+
 @keyframes slidein {
   from { transform: translate(50, 50%); }
   to   { transform: translate(-50px, 50%); }
@@ -274,15 +280,29 @@ nav{
   animation: 3s linear 1s infinite alternate slidein;
 }
 
+/* Animation de la langue*/
 
 @keyframes langue {
-  from {  transform: translateX(10px); }
-  to   {  transform: translateX(20px); }
+  from {  transform: translateY(-2px); }
+  to   {  transform: translateY(3px); }
 }
 
 
 .cls-3{
-  animation: 3s linear 1s infinite alternate langue;
+  animation: 1s ease-in-out 1s infinite alternate langue;
+}
+
+
+/* Animation de l'oeil*/
+
+@keyframes joue {
+  from {fill: #f75e9d;}
+  to {fill: #45cc96;}
+}
+
+
+.cls-8{
+  animation: 1.1s ease-in 2s infinite alternate joue;
 }
 
 
